<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ref_dtmf_panel"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_1"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_dtmf_4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dtmf_2"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp"
         />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_2"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dtmf_3"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dtmf_1"
        app:layout_constraintTop_toTopOf="@+id/btn_dtmf_1"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_3"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dtmf_2"
        app:layout_constraintTop_toTopOf="@+id/btn_dtmf_2"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_4"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_dtmf_7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dtmf_5"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dtmf_1"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_5"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dtmf_6"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dtmf_4"
        app:layout_constraintTop_toTopOf="@+id/btn_dtmf_4"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_6"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dtmf_5"
        app:layout_constraintTop_toTopOf="@+id/btn_dtmf_5"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_7"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_dtmf_asterisk"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dtmf_8"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dtmf_4"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_8"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dtmf_9"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dtmf_7"
        app:layout_constraintTop_toTopOf="@+id/btn_dtmf_7"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_9"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dtmf_8"
        app:layout_constraintTop_toTopOf="@+id/btn_dtmf_8"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_asterisk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingTop="9dp"
        android:text="@string/text_asterisk"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dtmf_0"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dtmf_7"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_0"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_dtmf_sign"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dtmf_asterisk"
        app:layout_constraintTop_toTopOf="@+id/btn_dtmf_asterisk"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_dtmf_sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_demo_calling_dtmf_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/text_sign"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="72dp"
        app:layout_constraintHeight_min="36dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dtmf_0"
        app:layout_constraintTop_toTopOf="@+id/btn_dtmf_0"
        app:layout_constraintWidth_max="72dp"
        app:layout_constraintWidth_min="36dp" />
</androidx.constraintlayout.widget.ConstraintLayout>