<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.example.rtc_android.weight.EditTextWithDelete
        android:id="@+id/edt_platform_url"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="5dp"
        android:hint="@string/platform_url"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:singleLine="true"
        app:drawableFocus="@drawable/ic_platform_url_active"
        app:drawableUnFocus="@drawable/ic_platform_url_active"
        app:isHideLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <com.example.rtc_android.weight.EditTextWithDelete
        android:id="@+id/edt_enterprise_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="10dp"
        android:hint="@string/enterprise_id"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:singleLine="true"
        app:drawableFocus="@drawable/ic_company_active"
        app:drawableUnFocus="@drawable/ic_company_active"
        app:isHideLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_platform_url" />

    <com.example.rtc_android.weight.EditTextWithDelete
        android:id="@+id/edt_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:singleLine="true"
        app:drawableFocus="@drawable/ic_source_active"
        app:drawableUnFocus="@drawable/ic_source_active"
        app:isHideLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_enterprise_id" />

    <com.example.rtc_android.weight.EditTextWithDelete
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:singleLine="true"
        app:drawableFocus="@drawable/ic_lock_active"
        app:drawableUnFocus="@drawable/ic_lock_active"
        app:isHideLine="true"
        app:layout_constraintEnd_toEndOf="@+id/edt_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_username"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002"
        app:srcCompat="@mipmap/ic_launcher" />

</androidx.constraintlayout.widget.ConstraintLayout>