<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.915" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.085" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_data"
        android:textColor="#ff262626"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_demo_main_title_bar_indicator"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <include
        android:id="@+id/include"
        layout="@layout/include_demo_main_customer_data_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vip"
        android:textColor="#ff262626"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <include
        android:id="@+id/include2"
        layout="@layout/include_demo_main_customer_data_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potential_customer"
        android:textColor="#ff262626"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/include2" />

    <include
        android:id="@+id/include_data_item"
        layout="@layout/include_demo_main_customer_data_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_phone_num"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/please_enter_phone_num_of_customer"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/include_data_item"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/include_data_item"
        app:layout_constraintTop_toTopOf="@+id/include_data_item"
        app:layout_constraintVertical_bias="0.060000002"
        tools:text="156xxxx1200" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoneNumError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone_num_incorrect"
        android:textColor="#ffff4d4f"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/include_data_item" />
</androidx.constraintlayout.widget.ConstraintLayout>